samples/_failures_safe/1761169441_6ec7dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d5f2cd9.c: In function ‘main’:
./samples/SAFE/__tmp_0d5f2cd9.c:144:28: error: ‘uint’ undeclared (first use in this function); did you mean ‘int’?
  144 |         sample_data3[i] = (uint
      |                            ^~~~
      |                            int
./samples/SAFE/__tmp_0d5f2cd9.c:144:28: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0d5f2cd9.c:144:32: error: expected ‘)’ at end of input
  144 |         sample_data3[i] = (uint
      |                           ~    ^
      |                                )
./samples/SAFE/__tmp_0d5f2cd9.c:144:9: error: expected declaration or statement at end of input
  144 |         sample_data3[i] = (uint
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_0d5f2cd9.c:144:9: error: expected declaration or statement at end of input
